--- a/app/index.css
+++ b/app/index.css
@@ -43,3 +43,35 @@ body {
     color: #fff;
     font-weight: 100;
 }
+
+.forecast-header {
+    font-size: 65px;
+    color: #333;
+    font-weight: 100;
+    text-align: center;
+}
+
+.forecast-container {
+    flex-direction: row;
+    flex-wrap: wrap;
+    max-width: 1200px;
+    margin: 50px auto;
+}
+
+.day-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin: 35px;
+}
+
+.weather {
+    height: 130px;
+}
+
+.date {
+    font-size: 30px;
+    color: #333;
+    font-weight: 100;
+}
