--- a/app/index.css
+++ b/app/index.css
@@ -75,3 +75,11 @@ body {
     color: #333;
     font-weight: 100;
 }
+
+.details-container {
+    font-size: 34px;
+    font-weight: 100;
+    max-width: 400px;
+    margin: 0 auto;
+    text-align: center;
+}
